[metadata]
name = scikits.bootstrap
description = Bootstrap confidence interval estimation routines for Numpy/Scipy/Pandas
license = Modified BSD
author = Constantine Evans
author_email = cevans@evanslabs.org

long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = http://github.com/cgevans/scikits-bootstrap
platforms = any

version = 1.1.0.dev4

classifiers = 
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Operating System :: OS Independent
    Typing :: Typed

[options]
include_package_data = True
package_dir =
    =src
packages = find_namespace:
install_requires = 
    numpy
    pyerf
    typing_extensions; python_version<"3.8"
tests_require =
    pytest
    pytest-cov

[options.packages.find]
where = src
exclude =
    tests

[bdist_wheel]
universal = 1