[metadata]
name = scikits.bootstrap
description = Bootstrap confidence interval estimation routines for Numpy/Scipy/Pandas
license = BSD 3-Clause
author = Constantine Evans
author_email = cevans@costinet.org

long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = http://github.com/cgevans/scikits-bootstrap
platforms = any

version = 1.1.0.dev4

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Operating System :: OS Independent
    Typing :: Typed

[options]
include_package_data = True
package_dir =
    =src
packages = find_namespace:
install_requires =
    numpy
    pyerf
    typing_extensions; python_version<"3.8"
tests_require =
    pytest
    pytest-cov

[options.packages.find]
where = src
exclude =
    tests

[flake8]
max_line_length = 127
extend_ignore = E203, W503, F403, F405
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[bdist_wheel]
universal = 1
